Update page title to 'Startup'
Changed the HTML document title from 'Shiroiro' to 'Startup' for branding consistency.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/output.css">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <title>Shiroiro</title>
+    <title>Startup</title>
 </head>
 <body class="relative dark:bg-dark-main-color bg-gray-100 text-black dark:text-[#ffffffb3] dark duration-150">
     <div class="overlay close-video absolute w-full h-full top-0 left-0 bg-overlay z-998 duration-120 opacity-0 hidden"></div>
